--- a/login.html
+++ b/login.html
@@ -11,19 +11,21 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
 
     <!-- Bootstrap Stylesheet -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <style>
-        body{
+        body {
             display: flex;
             flex-direction: column;
+            font-family: 'Lato', sans-serif;
             min-height: 100vh;
         }
 
-        footer{
+        footer {
             margin-top: auto;
         }
     </style>
@@ -65,11 +67,11 @@
         <form action="">
             <div class="form-group">
                 <Label>Email</Label>
-                <input class="form-control" type="text" name="" id="">
+                <input class="form-control w-50" type="text" name="" id="">
             </div>
             <div class="form-group">
                 <Label>Password</Label>
-                <input class="form-control" type="text" name="" id="">
+                <input class="form-control w-50" type="text" name="" id="">
             </div>
 
             <button type="submit" class="btn btn-primary btn-lg">Login</button>
@@ -81,35 +83,35 @@
     <script src="assets/js/bootstrap.js"></script>
 </body>
 <footer style="background-color: #16304E; color: white;">
-    <div class="container">
-        <div class="row py-4">
-            <div class="col-md-4">
-                <h2>Heading</h2>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eius alias laborum illum quod quae,
-                    enim illo asperiores nobis odit?</p>
-                <p>
-                    <i class="fab fa-facebook-square" style="color: blue;"></i>
-                    <i class="fab fa-linkedin" style="color: blue;"></i>
-                </p>
-            </div>
-            <div class="col-md-4 px-5">
-                <h4 class="ml-4">Site Map</h4>
-                <ul class="">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="service.html">Serivce</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="register.html">Register</a></li>
-                </ul>
-            </div>
-            <div class="col-md-4" style="font-size: 14px">
-                <h4>Location</h4>
-                <p>55, Random Home Address, Random Address St.</p>
-                <p class="my-0"><i class="fas fa-phone-alt"></i>  (505)-888-4867</p>
-                <p class="my-0"><i class="fas fa-envelope"></i>  random@random.com</p>
-            </div>
-            
-            <p class="my-0 mt-3 ml-2 text-secondary" style="font-size: 12px;">&copy; 2020. All rights reserved.</p>
+    <div class="row py-5 mx-5">
+        <div class="col-md-4 px-5">
+            <h2>Heading</h2>
+            <p class="" style="font-size: 14px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eius
+                alias laborum illum quod
+                quae,
+                enim illo asperiores nobis odit?</p>
+            <p>
+                <i class="fab fa-facebook-square" style="color: blue;"></i>
+                <i class="fab fa-linkedin" style="color: blue;"></i>
+            </p>
         </div>
+        <div class="col-md-4 pl-5 pr-0">
+            <h4>Site Map</h4>
+            <ul class="px-0">
+                <li> - <a href="service.html">Serivce</a></li>
+                <li> - <a href="about.html">About</a></li>
+                <li> - <a href="login.html">Login</a></li>
+                <li> - <a href="register.html">Register</a></li>
+            </ul>
+        </div>
+        <div class="col-md-4" style="font-size: 14px">
+            <h4>Location</h4>
+            <p>55, Random Home Address, Random Address St.</p>
+            <p class="my-0"><i class="fas fa-phone-alt mr-2"></i> (505)-888-4867</p>
+            <p class="my-0"><i class="fas fa-envelope mr-2"></i> random@random.com</p>
+        </div>
+
+        <p class="my-0 ml-5 text-secondary" style="font-size: 12px;">&copy; 2020. All rights reserved.</p>
     </div>
 </footer>
 
