Editted radio button on the buy page

--- a/buy.html
+++ b/buy.html
@@ -82,7 +82,7 @@
                     <p class="my-1" style="font-size: 40px;">Select Method of Payment</p>
                     <input style="font-size: 15px" type="radio" id="" name="Payment" value="PayPal">
                     <label for="PayPal">PayPal</label>
-                    <input style="font-size: 15px" type="radio" id="" name="Paymentds" value="MBirr">
+                    <input style="font-size: 15px" type="radio" id="" name="Payment" value="MBirr">
                     <label for="MBirr">MBirr</label><br>
 
                     <p style="display: inline-block;">Price:</p>
@@ -99,7 +99,7 @@
     <script src="assets/js/bootstrap.bundle.js"></script>
     <script src="assets/js/bootstrap.js"></script>
 </body>
-<footer style="background-color: #16304E; color: white;">
+<footer style="background-color:#16304E; color:white;">
     <div class="row py-5 mx-5">
         <div class="col-md-4 px-5">
             <h2>Heading</h2>
