Editted a typo and the input forms on the buy page

--- a/buy.html
+++ b/buy.html
@@ -74,10 +74,15 @@
                     Laboriosam aliquam facere
                     repellendus molestias omnis molestiae expedita eaque exercitationem neque.</h5>
                 <form action="">
-                    <input class="d-block my-1" type="text" name="" id="firstName" onfocus="this.value=''"
-                        value="First Name">
-                    <input class="d-block my-1" type="text" name="" id="lastName" onfocus="this.value=''"
-                        value="Last Name">
+                    <span style="color: red">*</span>
+                    <input class="my-1" type="text" name="" id="fullname" onfocus="this.value=''"
+                        value="Full Name"><br>
+                    <span style="color: red">*</span>
+                    <input class="my-1" type="text" name="" id="creditcardnumber" onfocus="this.value=''"
+                        value="Credit Card Number"><br>
+                    <span style="color: red">*</span>
+                    <input class="my-1" type="text" name="" id="pin_number" onfocus="this.value=''"
+                        value="Pin">
 
                     <p class="my-1" style="font-size: 40px;">Select Method of Payment</p>
                     <input style="font-size: 15px" type="radio" id="" name="Payment" value="PayPal">
