Changed the 'value' attribute in input forms to the 'placeholder' attribute

--- a/buy.html
+++ b/buy.html
@@ -76,13 +76,13 @@
                 <form action="">
                     <span style="color: red">*</span>
                     <input class="my-1" type="text" name="" id="fullname" onfocus="this.value=''"
-                        value="Full Name"><br>
+                        placeholder="Full Name"><br>
                     <span style="color: red">*</span>
                     <input class="my-1" type="text" name="" id="creditcardnumber" onfocus="this.value=''"
-                        value="Credit Card Number"><br>
+                        placeholder="Credit Card Number"><br>
                     <span style="color: red">*</span>
                     <input class="my-1" type="text" name="" id="pin_number" onfocus="this.value=''"
-                        value="Pin">
+                        placeholder="Pin">
 
                     <p class="my-1" style="font-size: 40px;">Select Method of Payment</p>
                     <input style="font-size: 15px" type="radio" id="" name="Payment" value="PayPal">
