Added about page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Check Out</title>
+    <title>Register</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -19,14 +19,7 @@
 
     <style>
         body {
-            display: flex;
-            flex-direction: column;
             font-family: 'Lato', sans-serif;
-            min-height: 100vh;
-        }
-
-        footer {
-            margin-top: auto;
         }
     </style>
 </head>
@@ -60,44 +53,36 @@
         </div>
     </nav>
     <div class="container mt-3">
-        <p class="display-4">Check Out</p>
+        <h3>About us</h3>
     </div>
     <hr>
-    <div class="container">
-        <div class="row" style="font-family: sans-serif;">
-            <div class="col-lg-6">
-                <img class="img-fluid" src="assets/images/Shoe1.jpg" alt="">
-            </div>
-            <div class="col-lg-6">
-                <h2>Shoe Lorem</h2>
-                <h5 class="mb-3 text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Laboriosam aliquam facere
-                    repellendus molestias omnis molestiae expedita eaque exercitationem neque.</h5>
-                <form action="">
-                    <span style="color: red">*</span>
-                    <input class="my-1" type="text" name="" id="fullname" onfocus="this.value=''"
-                        placeholder="Full Name"><br>
-                    <span style="color: red">*</span>
-                    <input class="my-1" type="text" name="" id="creditcardnumber" onfocus="this.value=''"
-                        placeholder="Credit Card Number"><br>
-                    <span style="color: red">*</span>
-                    <input class="my-1" type="text" name="" id="pin_number" onfocus="this.value=''"
-                        placeholder="Pin">
+    <div class="container mb-3">
+        <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic rerum at ratione pariatur
+            voluptatibus facere, quos quae aspernatur sequi tempora laudantium. Magni laborum, officiis pariatur
+            recusandae libero similique aspernatur provident. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Aut ex provident harum dolor reiciendis autem magnam expedita fugiat debitis atque non aspernatur sunt
+            deleniti perspiciatis vel quibusdam, maxime rem aliquam!
+        </p>
 
-                    <p class="my-1" style="font-size: 40px;">Select Method of Payment</p>
-                    <input style="font-size: 15px" type="radio" id="" name="Payment" value="PayPal">
-                    <label for="PayPal">PayPal</label>
-                    <input style="font-size: 15px" type="radio" id="" name="Payment" value="MBirr">
-                    <label for="MBirr">MBirr</label><br>
+        <p class="my-3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus recusandae non numquam beatae autem molestias
+            eius amet deleniti aspernatur tempora voluptatem laboriosam dolore nobis corrupti magni, id rerum doloribus?
+            Rerum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi sed mollitia ipsa tempora odio
+            accusamus possimus. Praesentium temporibus molestiae ab, pariatur cupiditate commodi corrupti animi vero
+            nostrum saepe ullam minus? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil rem magni
+            architecto iusto nisi? Odio rerum architecto deleniti est minima possimus dicta quidem, asperiores
+            repudiandae nihil voluptatum vel, libero error.
+        </p>
 
-                    <p style="display: inline-block;">Price:</p>
-                    <input style="background-color:rgba(211, 211, 211, 0.486); border:none;" type="text" name="" id=""
-                        value="100 ETB" readonly><br>
-                    <button type="button" class="btn btn-dark"><i class="fas fa-shopping-cart"></i> Confirm
-                        Payment</button>
-                </form>
-            </div>
-        </div>
+        <p class="mt-3 mb-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus recusandae non numquam beatae autem molestias
+            eius amet deleniti aspernatur tempora voluptatem laboriosam dolore nobis corrupti magni, id rerum doloribus?
+            Rerum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi sed mollitia ipsa tempora odio
+            accusamus possimus. Praesentium temporibus molestiae ab, pariatur cupiditate commodi corrupti animi vero
+            nostrum saepe ullam minus? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil rem magni
+            architecto iusto nisi? Odio rerum architecto deleniti est minima possimus dicta quidem, asperiores
+            repudiandae nihil voluptatum vel, libero error.
+        </p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -110,7 +95,7 @@
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous">
     </script>
 </body>
-<footer style="background-color:#16304E; color:white;">
+<footer style="background-color: #16304E; color: white;">
     <div class="row py-5 mx-5">
         <div class="col-md-4 px-5">
             <h2>Heading</h2>
