--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="service.html">Service</a>
                     </li>
                     <li class="nav-item d-flex flex-row-reverse">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -104,13 +104,13 @@
             <div id="MySlide" class="carousel slide my-4" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="assets/images/Shoe1.jpg" class="mx-auto d-block w-60" alt="...">
+                        <img src="assets/images/Shoe1.jpg" class="mx-auto d-block w-50" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/Shoe2.jpg" class="mx-auto d-block w-60" alt="...">
+                        <img src="assets/images/Shoe2.jpg" class="mx-auto d-block w-50" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/Shoe3.jpg" class="mx-auto d-block w-60" alt="...">
+                        <img src="assets/images/Shoe3.jpg" class="mx-auto d-block w-50" alt="...">
                     </div>
                 </div>
             </div>
@@ -126,9 +126,15 @@
         </div>
     </div>
 
-    <script src="assets/js/jquery-3.5.1.js"></script>
-    <script src="assets/js/bootstrap.bundle.js"></script>
-    <script src="assets/js/bootstrap.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous">
+    </script>
 </body>
 <footer style="background-color: #16304E; color: white;">
     <div class="row py-5 mx-5">
